# bg-remover-cli

./: .gitignore  .readmeaiignore  LICENSE  README.md  pyproject.toml
bgremove/: cli.py  pipeline.py  result.py
bgremove/api/: service.py
bgremove/io/: reader.py  writer.py
bgremove/models/: base.py  birefnet.py  registry.py
bgremove/processing/: alpha.py  compose.py  edges.py  matting.py  qa.py
docs/: product-requirements-document.md  step-by-step-build-plan.md
